# ck

./: CHANGELOG.md  Cargo.toml  README.md  UNEXPECTED.md
.github/workflows/: ci.yaml  release.yml
benchmarks/: .gitignore  README.md
benchmarks/swe-bench/: README.md  requirements.txt  run.py
benchmarks/swe-bench/results/: summary.md
ck-ann/: Cargo.toml
ck-chunk/: Cargo.toml
ck-chunk/queries/c/: tags.scm
ck-chunk/queries/cpp/: tags.scm
ck-chunk/queries/dart/: tags.scm
ck-chunk/queries/elixir/: tags.scm
ck-chunk/queries/markdown/: tags.scm
ck-chunk/src/: lib.rs  query_chunker.rs
ck-chunk/tests/fixtures/: markdown_breadcrumbs.md
ck-cli/: Cargo.toml
ck-cli/src/: main.rs
ck-cli/tests/: integration_tests.rs
ck-core/src/: lib.rs
ck-embed/: Cargo.toml
ck-embed/src/: accel.rs  lib.rs  reranker.rs
ck-engine/: Cargo.toml
ck-engine/src/: lib.rs  semantic_v3.rs
ck-index/: Cargo.toml
ck-index/src/: lib.rs
ck-models/: Cargo.toml
ck-tui/: Cargo.toml
docs-site/: index.md
docs-site/features/: semantic-search.md
docs-site/guide/: advanced-usage.md  installation.md  limitations.md  roadmap.md
docs-site/reference/: advanced.md
scripts/: install-native-openvino-runtime.sh
