[workspace]
resolver = "2"
members = [
    "ck-cli",
    "ck-core",
    "ck-index",
    "ck-engine",
    "ck-chunk",
    "ck-embed",
    "ck-ann",
    "ck-models",
    "ck-tui",
]

[workspace.package]
version = "0.7.4"
edition = "2024"
authors = ["Mike Renwick"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BeaconBay/ck"
rust-version = "1.88.0"


[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
blake3 = "1.5"
memmap2 = "0.9"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
walkdir = "2.4"
tantivy = "0.24"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-zig = "1.1"
tree-sitter-dart = "0.0.4"
tree-sitter-elixir = "0.3"
tree-sitter-md = "0.2"
fastembed = { version = "5.1", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
openssl = { version = "0.10" }
tempfile = "3.8"
glob = "0.3"
globset = "0.4"
ignore = "0.4"
ctrlc = "3.4"
pdf-extract = "0.9"
uuid = { version = "1.8", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"] }
tokenizers = "0.20.1"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["download-binaries", "tls-native", "ndarray", "std"] }
once_cell = "1.19"
ndarray = { version = "0.17", default-features = false, features = ["std"] }
num_cpus = "1.16"
