[package]
name = "ck-ann"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Approximate nearest neighbor search for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["search", "ann", "vector"]
categories = ["algorithms"]

[dependencies]
ck-core = { version = "0.7.3", path = "../ck-core" }

anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
# instant-distance = { workspace = true }  # Temporarily disabled

[dev-dependencies]
tempfile = "3.8"