[package]
name = "ck-search"
version = "0.7.2"
edition = "2024"
authors = ["Mike Renwick"]
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"
description = "Semantic grep by embedding - find code by meaning, not just keywords"
repository = "https://github.com/BeaconBay/ck"
homepage = "https://github.com/BeaconBay/ck"
readme = "../README.md"
keywords = ["grep", "search", "semantic", "code", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ck"
path = "src/main.rs"

[lib]
name = "ck_search"
path = "src/lib.rs"

[dependencies]
ck-core = { version = "0.7.2", path = "../ck-core" }
ck-index = { version = "0.7.2", path = "../ck-index" }
ck-engine = { version = "0.7.2", path = "../ck-engine" }
ck-chunk = { version = "0.7.2", path = "../ck-chunk" }
ck-embed = { version = "0.7.2", path = "../ck-embed", default-features = false }
ck-ann = { version = "0.7.2", path = "../ck-ann" }
ck-models = { version = "0.7.2", path = "../ck-models" }
ck-tui = { version = "0.7.2", path = "../ck-tui" }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { version = "0.6", features = ["transport-io"] }
rmcp-macros = "0.6"
tokio-util = { version = "0.7", features = ["rt", "full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
schemars = "1.0"
glob = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
indicatif = "0.17"
console = "0.15"
owo-colors = "4.0"
walkdir = "2.3"
ratatui = "0.26"
crossterm = "0.27"
shlex = "1.3"
syntect = "5.2"
openssl = { workspace = true, optional = true }
uuid = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
dirs = "5.0"

[features]
default = ["fastembed", "mixedbread"]
fastembed = ["ck-embed/fastembed"]
mixedbread = ["ck-embed/mixedbread"]
vendored-openssl = ["openssl?/vendored"]

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "2.0"
