[package]
name = "ck-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Search engine implementation for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["search", "engine", "semantic"]
categories = ["algorithms"]

[dependencies]
ck-core = { version = "0.7.3", path = "../ck-core" }
ck-index = { version = "0.7.3", path = "../ck-index" }
ck-embed = { version = "0.7.3", path = "../ck-embed", default-features = false }
ck-ann = { version = "0.7.3", path = "../ck-ann" }
ck-chunk = { version = "0.7.3", path = "../ck-chunk" }
ck-models = { version = "0.7.3", path = "../ck-models" }
serde_json = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
globset = { workspace = true }

[features]
default = ["fastembed", "mixedbread"]
fastembed = ["ck-embed/fastembed"]
mixedbread = ["ck-embed/mixedbread"]

[dev-dependencies]
tempfile = "3.8"
