[package]
name = "ck-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Indexing and storage for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["indexing", "search", "storage"]
categories = ["database-implementations"]

[dependencies]
ck-core = { version = "0.7.4", path = "../ck-core" }
ck-chunk = { version = "0.7.4", path = "../ck-chunk", default-features = false }
ck-embed = { version = "0.7.4", path = "../ck-embed", default-features = false }
ck-models = { version = "0.7.4", path = "../ck-models" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
memmap2 = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
ctrlc = { workspace = true }
pdf-extract = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["fastembed", "mixedbread"]
fastembed = ["ck-embed/fastembed", "ck-chunk/fastembed"]
mixedbread = ["ck-embed/mixedbread", "ck-chunk/mixedbread"]

[dev-dependencies]
