[package]
name = "ck-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Model registry and configuration for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["models", "config", "registry"]
categories = ["config"]

[dependencies]
ck-core = { version = "0.7.4", path = "../ck-core" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }