[package]
name = "ck-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal UI for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["tui", "terminal", "ui", "search"]
categories = ["command-line-utilities"]

[dependencies]
ck-core = { version = "0.7.4", path = "../ck-core" }
ck-index = { version = "0.7.4", path = "../ck-index", default-features = false }
ck-chunk = { version = "0.7.4", path = "../ck-chunk", default-features = false }
ck-embed = { version = "0.7.4", path = "../ck-embed", default-features = false }
ck-engine = { version = "0.7.4", path = "../ck-engine", default-features = false }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
syntect = "5.2"
shlex = "1.3"
dirs = "5.0"

[features]
default = ["fastembed", "mixedbread"]
fastembed = ["ck-embed/fastembed", "ck-index/fastembed", "ck-chunk/fastembed", "ck-engine/fastembed"]
mixedbread = ["ck-embed/mixedbread", "ck-index/mixedbread", "ck-chunk/mixedbread", "ck-engine/mixedbread"]

